5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1668_1397.log
== TEST (2019-04-15 19:42:01) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
valor = 5,00*h
e = 4,00
if(area<=10000):
	print("valor*1000")
	
else:
	print("valor*1000 + e")
-- OUTPUT:
valor*1000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:12) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
valor = 5,00*h
e = 4,00
if(area<=10000):
	print("valor*1000")
	
else:
	print("valor*1000 + e")
-- EXECUTION TIME:
0.170496
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
valor*1000
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
valor*1000 + e
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
valor*1000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:14) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
valor = 5,00*h
e = 4,00
if(area<=10000):
	print("valor*1000")
	
else:
	print("valor*1000 + e")
-- EXECUTION TIME:
0.123316
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
valor*1000
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
valor*1000 + e
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
valor*1000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:46:50) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
valor = 5,00*h
e = 4,00
if(area<=10000):
	c = area*5
print(round(c ,2))
	
else:
   d =(10000*5)+(4*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:37) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
if(area<=10000):
	c = h*5
print(round(c ,2))
	
else:
   d =(10000*5)+(4*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:39) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
if(area<=10000):
	c = h*5
print(round(c ,2))
	
else:
   d =(10000*5)+(4*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:39) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
if(area<=10000):
	c = h*5
print(round(c ,2))
	
else:
   d =(10000*5)+(4*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:40) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
if(area<=10000):
	c = h*5
print(round(c ,2))
	
else:
   d =(10000*5)+(4*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:06) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = 1000
if(area<=10000):
	c = (area*h*5)
print(round(c ,2))
	
else:
   d =(10000*h*5)+(4*h*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:10) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = 1000
if(area<=10000):
	c = (area*h*5)
print(round(c ,2))
	
else:
   d =(10000*h*5)+(4*h*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:52:11) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = 1000
if(area<=10000):
	c = (area*h*5)
print(round(c ,2))
	
else:
   d =(10000*h*5)+(4*h*c)
	print(round(d ,2))
-- EXECUTION TIME:
0.19557
-- ERROR:
  File "/home/codebench/codes/1668/1397/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:37) 
-- CODE:
area = float(input("leia a area a ser fertilizada: "))
h = area*1000
if(area<=10000):
	c = (area*h*5)
print(round(c ,2))
	
else:
   d =(10000*h*5)+(4*h*c)
	print(round(d ,2))
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
